--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-
     "deploy": "gh-pages -d dist",
-  
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
+    "claude": "^0.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
