--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.0",
+    "axios": "^1.7.3",
     "claude": "^0.0.6",
+    "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
